# network-dashboard

./: .dockerignore  .env.example  .env.mock  .env.production  .gitattributes  .gitignore  .pre-commit-config.yaml  E2E_TEST_REPORT.md  EXAMPLE_DATA_FLOW.md  FRONTEND_TEST_REPORT.md  LICENSE  Makefile  QUICK_START.md  README.md  RELEASE_REPORT.md  SETTINGS_TEST_REPORT.md  check_phase.py  create_100_clients.py  create_demo_data.py  create_time_series_demo.py  docker-compose.dev.yaml  docker-compose.production.yml  docker-compose.yml  drop_topology.py  fix_db_schema.py  fix_parser_imports.py  fix_phase_enum.py  init_db.py  load_reference_clients.py  migrate_remove_columns.py  package-lock.json  pyproject.toml  requirements-dev.txt  run_device_list_migration.py  run_expectations_migration.py  run_mac_list_migration.py  run_migration.py  setup_test_data.py  sync_mac_list.py  test_client_comparison.py  (+10 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
alembic/: env.py
app/: __init__.py  main.py
config/: api_test.yaml  api_test.yaml.local  api_test_mock.yaml  client_comparison.yaml  device_inventory.csv  indicators.yaml  scheduler.yaml  seaweedfs_s3.json  settings.yaml  switches.yaml
docs/: COMPANY_SOP.md  DEPLOYMENT_SOP.md  LOCAL_TESTING.md  PARSER_VALIDATION_SOP.md  PPT_OUTLINE.md  RELEASE_REPORT_v2.19.14.md  RELEASE_REPORT_v2.19.15.md  SOP_DOCKER_K8S_DEPLOYMENT.md  USER_AND_DEV_GUIDE.md  client_comparison_redesign.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  service.yaml  serviceaccount.yaml
migrations/: add_arp_portchannel_expectations.sql  add_checkpoints_and_reference_clients.sql  add_client_categories.sql  add_interface_mappings.sql  add_maintenance_devices.sql  add_maintenance_mac_list.sql  add_maintenance_to_categories.sql  add_severity_overrides.sql  add_uplink_version_expectations.sql  add_use_same_port.sql  add_vendor_to_device_mappings.sql  allow_mac_multi_category.sql  redesign_maintenance_device_list.sql  (+1 more)
mock_server/: Dockerfile  (+7 more)
(+473 files in other folders)
